Bug 1242807 - Fix mp4parse-rust's error reporting via telemetry.  r=giles